# SPCTOM

./: LICENSE  README.md  pyproject.toml  requirements.txt
SPCTOM.egg-info/: PKG-INFO  SOURCES.txt
src/: config.py  diagnostic.py  main.py  pctom.py  robot.py  spctom.py  tom.py  utils.py
