[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SPCTOM"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"numpy",
	"scipy",
	"matplotlib",
	"roboticstoolbox-python",
	"spatialmath-python",
	"mujoco>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["."]